# assessment1

./: CMakeLists.txt  problem.md  q1.json  schema.pgsql
data/0/: categories.txt  points.txt
data/1/: categories.txt  groups.txt
include/: json_parser.cpp  json_parser.hpp  query_builder.cpp  query_builder.hpp  types.hpp
loader/: main.cpp
query/: main.cpp
solution 1/: solution1.cpp
